# kured

./: .gitignore  BUILD.bazel  Gopkg.toml  Makefile  README.md  WORKSPACE  bazel-bin  bazel-genfiles  bazel-kured  bazel-out  bazel-testlogs  daemonsetlock.go  delayticker.go  ds-kured.yaml  go.mod  go.sum  prometheus.go
cmd/kured/: BUILD.bazel  Dockerfile  clusterlock.go  main.go
cmd/lockcheck/: main.go
cmd/prom-active-alerts/: BUILD.bazel  main.go
pkg/alerts/: BUILD.bazel  prometheus.go
pkg/daemonsetlock/: BUILD.bazel  daemonsetlock.go
pkg/delaytick/: BUILD.bazel
pkg/notifications/slack/: BUILD.bazel
