load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/weaveworks/kured/cmd/prom-active-alerts",
    visibility = ["//visibility:private"],
    deps = ["//pkg/alerts:go_default_library"],
)

go_binary(
    name = "prom-active-alerts",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
